# rune-companion

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commands.py  config.example.py  config.py  config_local.example.py  core_chat.py  llm_client.py  main.py  memory_api.py  persona.py  pyproject.toml  tts_engine.py  versioning.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  connectors.md  memory.md  running-locally.md
src/rune_companion/: __main__.py  config.py  logging_setup.py
src/rune_companion/cli/: bootstrap.py  commands.py  main.py
src/rune_companion/connectors/: console_connector.py  matrix_client.py  matrix_connector.py  matrix_e2ee.py
src/rune_companion/connectors/connectors/: console_connector.py  matrix_client.py
src/rune_companion/core/: chat.py  persona.py  ports.py  state.py
src/rune_companion/llm/: client.py  offline.py
src/rune_companion/memory/: api.py  controller.py  store.py  summarizer.py
src/rune_companion/tasks/: task_api.py  task_models.py  task_scheduler.py  task_store.py
src/rune_companion/tasks/tasks/: __init__.py
src/rune_companion/tts/: engine.py
tasks/: task_api.py  task_scheduler.py
tests/: conftest.py  fakes.py  test_commands.py  test_memory_store.py  test_task_scheduler.py
