# pyproject.toml

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rune_companion"]

[project.scripts]
rune-companion = "rune_companion.__main__:main"

[project]
name = "rune-companion"
version = "0.1.0"
requires-python = ">=3.12"
description = "Minimal chat companion framework with memory, tasks, and Matrix connector."
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
matrix = ["matrix-nio[e2e]"]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/ogyrec-o/rune-companion"
Repository = "https://github.com/ogyrec-o/rune-companion"
Issues = "https://github.com/ogyrec-o/rune-companion/issues"

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
fix = true
src = ["src"]

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".local",
    "matrix_store",
    "memory_store",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle/pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E203",          # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["rune_companion"]

[tool.mypy]
python_version = "3.12"
files = ["src/rune_companion"]

pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
no_implicit_optional = true

# MVP-friendly:
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

cache_dir = ".mypy_cache"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
